--- a/style.css
+++ b/style.css
@@ -7,8 +7,18 @@
     padding: 0;
 }
 
+body.dark {
+    background-color: #1f2020;
+    color: white;
+}
+
 button, a, div {
     -webkit-tap-highlight-color: transparent;
+}
+
+a {
+    text-decoration: none;
+    color: #21005d;
 }
 
 button {
@@ -55,4 +65,30 @@ button.filled {
 
 button.filled:hover {
     background-color: #d5c0f6;
+}
+
+main.wrapper {
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
+    width: calc(100% - 40px);
+    height: calc(100vh - 60px);
+    padding: 0 20px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+    background-color: white;
+    width: 17px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-clip: content-box;
+    background-color: #999;
+
+    border-radius: 10px;
+    border: 4px solid transparent;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #666;
 }
