--- a/style.css
+++ b/style.css
@@ -76,6 +76,19 @@ main.wrapper {
     overflow-y: scroll;
 }
 
+div.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
 ::-webkit-scrollbar {
     background-color: white;
     width: 17px;
